Fixing labels spacing

--- a/alignments/static/alignments/style.css
+++ b/alignments/static/alignments/style.css
@@ -21,11 +21,9 @@
   .alignment_section{
     display: grid;
     place-items: center;
-    align-items: center;
     background: wheat;
     grid-column: 2 / 4;
     grid-row: 2 ;
-    position: relative;
   }
 
   .topology_section{
@@ -75,6 +73,10 @@
   .vue-treeselect__label,
   .vue-treeselect__tip-text {
     text-overflow: clip;
+  }
+
+  #alnMenu{
+    padding-top: 2%;
   }
 
   #topview{
